@@ -22,6 +22,7 @@
       it to link_to) use url_for_file_column's :absolute => true option.
     * added support for file_column enabled unit tests [Manuel Holtgrewe]
     * support for custom transformation of images [Frederik Fix]
+    * allow setting of image attributes (e.g., quality) [Frederik Fix]
 
 0.3.1
     * make object with file_columns serializable
